--- a/templates/header.html
+++ b/templates/header.html
@@ -3,27 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font Awesome icons -->
+    <title>Home</title>
+    <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- CSS styling -->
-    <link rel="stylesheet" href="./static/css/styles.css">
-    <title>Personal Blog</title>
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
-    <nav>
-        <div class="logo">
-            <h1>Logo</h1>
-        </div>
-        <ul class="navbar-nav" id="navbar-list">
-            <li class="nav-item"><a href="">Home</a></li>
-            <li class="nav-item"><a href="">Register</a></li>
-            <li class="nav-item"><a href="">Login</a></li>
-            <li class="nav-item"><a href="">About</a></li>
-            <li class="nav-item"><a href="">Contact</a></li>
-            <li class="nav-item"><a href="">Logout</a></li>
-        </ul>
-        <div class="menu-icon">
-            Menu
-            <i class="fas fa-bars" onclick="toggleMenu()"></i>
-        </div>
-    </nav>
+     <!-- header -->
+     <header>
+        <nav class = "navbar">
+            <div class = "container">
+            <a href = "" class = "navbar-brand">Blog</a>
+            <div class = "navbar-nav">
+                <a href = "">home</a>
+                <a href = "">login</a>
+                <a href = "">sign up</a>
+                <a href = "">about</a>
+                <a href = "">contact</a>
+                <a href = "">log out</a>
+            </div>
+            </div>
+        </nav>
