--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Title -->
-    <title>about</title>
-    <!-- css -->
-     <link rel="stylesheet" href="static/css/styles.css">
-</head>
-<body>
+{% include "header.html" %}
     
     <div class="heading">
         <h1>About</h1>
@@ -34,5 +24,4 @@
         </section>
     </div>
 
-</body>
-</html>
+    {% include "footer.html" %}
