--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="static/css/styles.css">
-</head>
-<body>
-     <!-- header -->
-     <header>
-        <nav class = "navbar">
-            <div class = "container">
-            <a href = "" class = "navbar-brand">Blog</a>
-            <div class = "navbar-nav">
-                <a href = "">home</a>
-                <a href = "">login</a>
-                <a href = "">sign up</a>
-                <a href = "">about</a>
-                <a href = "">contact</a>
-                <a href = "">log out</a>
-            </div>
-            </div>
-        </nav>
+{% include "header.html" %}
+
         <div class = "banner">
           <div class = "container">
             <h1 class = "banner-title">
@@ -136,15 +112,4 @@
 
     </section>
 
-    <!-- footer -->
-    <footer>
-        <div class = "socials">
-          <a href = "https://x.com/GeorgeMatiko?t=yqHFp_7iuUJHw0aMs3nD-Q&s=09"><i class = "fab fa-twitter"></i></a>
-          <a href = "#"><i class = "fab fa-linkedin"></i></a>
-          <a href = "https://github.com/Maroa2002"><i class = "fab fa-github"></i></a>
-        </div>
-        <span>Copyright George Maroa</span>
-      </footer>
-
-</body>
-</html>
+{% include "footer.html" %}
