--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,7 +30,7 @@ img {
 /* header */
 header {
     min-height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/static/images/post.jpg') center/cover no-repeat fixed;
+    /* background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/static/images/post.jpg') center/cover no-repeat fixed; */
     display: flex;
     flex-direction: column;
     justify-content: stretch;
@@ -390,3 +390,126 @@ footer {
     }
 }
 
+/* styling for the contatct page */
+.contact {
+    position: relative;
+    min-height: 100vh;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* background: ; */
+}
+
+.contact .contact-content {
+    max-width: 800px;
+    text-align: center;
+}
+
+.contact .contact-content h2 {
+    font-size: 36px;
+    font-weight: 500;
+}
+
+.contact .contact-content p {
+    font-weight: 300;
+}
+
+.contact-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.contact-container .contact-info {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-container .contact-info .contact-box {
+    position: relative;
+    padding: 20px 0;
+    display: flex;
+}
+
+.contact-container .contact-info .contact-box .icon {
+    min-width: 60px;
+    height: 60px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 22px;
+}
+
+.contact-container .contact-info .contact-box .text {
+    display: flex;
+    margin-left: 20px;
+    font-size: 16px;
+    flex-direction: column;
+    font-weight: 300;
+}
+
+.contact-container .contact-info .contact-box .text h3 {
+    font-weight: 500;
+    color: #3c393d;
+}
+
+.contact-form {
+    width: 40%;
+    padding: 40px;
+    /* background: #f2f2f2; */
+}
+
+.contact-form h2 {
+    font-size: 30px;
+    color: #333;
+    font-weight: 500;
+}
+
+.contact-form .input-box {
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.contact-form .input-box input, .contact-form .input-box textarea {
+    width: 100%;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 2px solid #333;
+    outline: none;
+    resize: none;
+}
+
+.contact-form .input-box input[type="submit"] {
+    width: 100px;
+    background: #3e8e41;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 18px;
+}
+
+@media (max-width: 990px) {
+    .contact {
+        padding: 50px;
+    }
+    .contact-container {
+        flex-direction: column;
+    }
+    .contact-container .contact-info {
+        margin-bottom: 40px;
+    }
+    .contact-container .contact-info, .contact-form {
+        width: 100%;
+    }
+}
