--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
         </p>
     </div>
-    <div class=".contact-container">
+    <div class="contact-container">
         <div class="contact-info">
             <div class="contact-box">
                 <div class="icon">
