--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="">
-        <h1>Log In</h1>
-        <label for="email">Email: </label>
-        <input type="email" name="email" id="">
-        <br><br>
-        <label for="password">Password: </label>
-        <input type="password" name="password" id="">
-        <br><br>
-        <input type="submit" value="Log In">
+{% include "header.html" %}
+
+<div class="center">
+    <h1>Login</h1>
+    <form action="" method="post">
+        <div class="text_field">
+            <input type="text" name="username" required>
+            <label for="username">Username</label>
+            <span></span>
+        </div>
+        <div class="text_field">
+            <input type="password" name="password" required>
+            <label for="password">Password</label>
+            <span></span>
+        </div>
+        <div class="forgot">Forgot password?</div>
+        <input type="submit" value="Login">
+        <div class="signup">
+            Not registered? <a href="">Sign Up</a>
+        </div>
     </form>
-</body>
-</html>
+</div>
+
+
+{% include "footer.html" %}
