--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,23 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="">
-        <h1>Sign Up</h1>
-        <label for="name">Name: </label>
-        <input type="text" name="name" id="">
-        <br><br>
-        <label for="email">Email: </label>
-        <input type="email" name="email" id="">
-        <br><br>
-        <label for="password">Password: </label>
-        <input type="password" name="password" id="">
-        <br><br>
+{% include "header.html" %}
+
+<div class="center">
+    <h1>Sign Up</h1>
+    <form action="" method="post">
+        <div class="text_field">
+            <input type="text" name="username" required>
+            <label for="username">Username</label>
+            <span></span>
+        </div>
+        <div class="text_field">
+            <input type="email" name="email" required>
+            <label for="email">Email</label>
+            <span></span>
+        </div>
+        <div class="text_field">
+            <input type="password" name="password" required>
+            <label for="password">Password</label>
+            <span></span>
+        </div>
         <input type="submit" value="Sign Up">
+        <div class="signup">
+            Already registered? <a href="">Login</a>
+        </div>
     </form>
-</body>
-</html>
+</div>
+
+
+{% include "footer.html" %}
