--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -513,3 +513,120 @@ footer {
         width: 100%;
     }
 }
+
+/* styling for the login page */
+.center {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    height: 450px;
+    background: #e6dddd;
+    border-radius: 10px;
+    margin-top: 270px;
+}
+
+.center h1 {
+    text-align: center;
+    padding: 0 0 20px 0;
+    border-bottom: 1px solid silver;
+}
+
+.center form {
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
+.center form .text_field {
+    position: relative;
+    border-bottom: 2px solid #adadad;
+    margin: 30px 0;
+}
+
+.center form .text_field input {
+    width: 100%;
+    padding: 10px 5px;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;
+}
+
+.center form .text_field label {
+    position: absolute;
+    padding: 20px;
+    top: 50%;
+    left: 5px;
+    color: #adadad;
+    transform: translateY(-50%);
+    font-size: 16px;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.center form .text_field span::before {
+    content: "";
+    position: absolute;
+    top: 40px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #2691d9;
+}
+
+.center form .text_field input:focus ~ label,
+.center form .text_field input:valid ~ label {
+    top: -5px;
+    color: #2691d9;
+}
+
+.center form .text_field input:focus ~ span::before,
+.center form .text_field input:valid ~ span::before {
+    width: 100%;
+}
+
+.forgot {
+    margin: -5px 0 20px 5px;
+    color: #a6a6a6;
+    cursor: pointer;
+}
+
+.forgot:hover {
+    text-decoration: underline;
+}
+
+input[type="submit"] {
+    width: 100%;
+    height: 50px;
+    border: 1px solid;
+    background: #3e8e41;
+    border-radius: 25px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+}
+
+input[type="submit"]:hover {
+    border-color: #2691d9;
+    transition: .5s;
+}
+
+.signup {
+    margin: 30px 0;
+    text-align: center;
+    font-size: 16px;
+    color: #666666;
+}
+
+.signup a {
+    color: #2691d9;
+    text-decoration: none;
+}
+
+.signup a:hover {
+    text-decoration: underline;
+}
