--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/css/styles.css') }}">
     
 </head>
 <body>
