--- a/templates/contact.html
+++ b/templates/contact.html
@@ -52,8 +52,8 @@
                     <input type="email" name="email" required="required">
                 </div>
                 <div class="input-box">
-                    <label for="">Type your message</label>
-                    <textarea required="required"></textarea>
+                    <label for="message">Type your message</label>
+                    <textarea name="message" required="required"></textarea>
                 </div>
                 <div class="input-box">
                    <input type="submit" value="Send">
