changed the position of the header tag for the home page

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,8 +10,7 @@
     
 </head>
 <body>
-     <!-- header -->
-     <header>
+     <!-- navbar -->
         <nav class = "navbar">
             <div class = "container">
                 <a href = "{{ url_for('home') }}" class = "navbar-brand">Blog</a>
