--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% include "header.html" %}
-
+     <header>
         <div class = "banner">
           <div class = "container">
             <h1 class = "banner-title">
