--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,7 +30,7 @@ img {
 /* header */
 header {
     min-height: 100vh;
-    /* background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/static/images/post.jpg') center/cover no-repeat fixed; */
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/static/images/home-header.jpg') center/cover no-repeat fixed;
     display: flex;
     flex-direction: column;
     justify-content: stretch;
