--- a/templates/index.html
+++ b/templates/index.html
@@ -18,95 +18,22 @@
         </div>
 
         <div class="blog-container">
+            {% for post in posts %}
             <div class="blog-box">
 
                 <div class="blog-img">
-                    <img src="static/images/post.jpg" alt="Blog-img">
+                    <img src="{{ post.img_url }}" alt="Blog-img">
                 </div>
 
                 <div class="blog-text">
-                    <span>7 Sep 2024 / George Maroa</span>
-                    <a href="" class="blog-title"> What is the Telecommunication Company in Kenya?</a>
-                    <p>If you have some problem with the drivers try running the application from the command line and see</p>
+                    <span>{{ post.author }}</span>
+                    <a href="" class="blog-title">{{ post.title }}</a>
+                    <p>{{ post.subtitle }}</p>
                     <a href="" class="read-more">Read More</a>
                 </div>
 
             </div>
-
-            <div class="blog-box">
-                
-                <div class="blog-img">
-                    <img src="static/images/post.jpg" alt="Blog-img">
-                </div>
-
-                <div class="blog-text">
-                    <span>7 Sep 2024 / George Maroa</span>
-                    <a href="" class="blog-title"> What is the Telecommunication Company in Kenya?</a>
-                    <p>If you have some problem with the drivers try running the application from the command line and see</p>
-                    <a href="" class="read-more">Read More</a>
-                </div>
-
-            </div>
-
-            <div class="blog-box">
-                
-                <div class="blog-img">
-                    <img src="static/images/post.jpg" alt="Blog-img">
-                </div>
-
-                <div class="blog-text">
-                    <span>7 Sep 2024 / George Maroa</span>
-                    <a href="" class="blog-title"> What is the Telecommunication Company in Kenya?</a>
-                    <p>If you have some problem with the drivers try running the application from the command line and see</p>
-                    <a href="" class="read-more">Read More</a>
-                </div>
-
-            </div>
-
-            <div class="blog-box">
-                
-                <div class="blog-img">
-                    <img src="static/images/post.jpg" alt="Blog-img">
-                </div>
-
-                <div class="blog-text">
-                    <span>7 Sep 2024 / George Maroa</span>
-                    <a href="" class="blog-title"> What is the Telecommunication Company in Kenya?</a>
-                    <p>If you have some problem with the drivers try running the application from the command line and see</p>
-                    <a href="" class="read-more">Read More</a>
-                </div>
-
-            </div>
-
-            <div class="blog-box">
-                
-                <div class="blog-img">
-                    <img src="static/images/post.jpg" alt="Blog-img">
-                </div>
-
-                <div class="blog-text">
-                    <span>7 Sep 2024 / George Maroa</span>
-                    <a href="" class="blog-title"> What is the Telecommunication Company in Kenya?</a>
-                    <p>If you have some problem with the drivers try running the application from the command line and see</p>
-                    <a href="" class="read-more">Read More</a>
-                </div>
-
-            </div>
-
-            <div class="blog-box">
-                
-                <div class="blog-img">
-                    <img src="static/images/post.jpg" alt="Blog-img">
-                </div>
-
-                <div class="blog-text">
-                    <span>7 Sep 2024 / George Maroa</span>
-                    <a href="" class="blog-title"> What is the Telecommunication Company in Kenya?</a>
-                    <p>If you have some problem with the drivers try running the application from the command line and see</p>
-                    <a href="" class="read-more">Read More</a>
-                </div>
-
-            </div>
+            {% endfor %}
 
         </div>
 
