--- a/templates/post.html
+++ b/templates/post.html
@@ -1,25 +1,20 @@
 {% include "header.html" %}
     
     <div class="heading">
-        <h1>Post Title</h1>
-        <!-- <p>
-            Post Subtitle
-        </p> -->
+        <h1>{{ post.title }}</h1>
     </div>
 
     <div class="container">
         <section class="about">
             <div class="about-image">
-                <img src="static/images/post.jpg" alt="About-image">
+                <img src="{{ post.img_url }}" alt="About-image">
             </div>
 
             <div class="about-content">
-                <h2>Warm embrace in a cup</h2>
+                <h2>{{ post.subtitle }}</h2>
                 <p>
-                    If you have some problem with the drivers try running the application from the command line and see if there are graphics related warnings. Also type dmesg to see if there are other related information here.
-                    If you get crashes install the relevant -dbg pacakges (libgl1-mesa-dri-dbg or libgl1-mesa-dri-experimental-dbg for 3D drivers and xserver-xorg-video-intel-dbg , xserver-xorg-video-nouveau-dbg or xserver-xorg-video-radeon-dbg for X drivers) and reproduce the crash with gdb. 
+                    {{ post.body }}
                 </p>
-                <!-- <a href="" class="read-more">Read More</a> -->
             </div>
         </section>
     </div>
