--- a/templates/new-post.html
+++ b/templates/new-post.html
@@ -34,7 +34,7 @@
                 <button type="submit">Add Post</button>
             </div>
         </form>
-        <a href="{{ url_for('retrieve_all_posts') }}" class="btn-back">Go Back</a>
+        <a href="{{ url_for('view_dashboard') }}" class="btn-back">Go Back</a>
     </div>
 
 </body>
