--- a/templates/new-post.html
+++ b/templates/new-post.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Create New Blog Post</h2>
-        <form action="/submit-post" method="POST">
+        <form action="{{ url_for('create_new_post') }}" method="POST">
             <div class="form-group">
                 <label for="title">Blog Post Title</label>
                 <input type="text" id="title" name="title" required>
