--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -24,16 +24,16 @@
         </thead>
         <tbody>
             {% for post in posts %}
-            <tr>
-                <td>{{ post.title }}</td>
-                <td>{{ post.subtitle }}</td>
-                <td>{{ post.author }}</td>
-                <td>{{ post.date }}</td>
-                <td>
-                    <a href="edit-post.html?id=1" class="btn-edit">Edit</a>
-                    <a href="delete-post.html?id=1" class="btn-delete">Delete</a>
-                </td>
-            </tr>
+                <tr>
+                    <td>{{ post.title }}</td>
+                    <td>{{ post.subtitle }}</td>
+                    <td>{{ post.author }}</td>
+                    <td>{{ post.date }}</td>
+                    <td>
+                        <a href="{{ url_for('edit_current_post', post_id=post.id) }}" class="btn-edit">Edit</a>
+                        <a href="{{ url_for('delete_post', post_id=post.id) }}" class="btn-delete">Delete</a>
+                    </td>
+                </tr>
             {% endfor %}
         </tbody>
     </table>
