--- a/templates/post.html
+++ b/templates/post.html
@@ -13,7 +13,7 @@
             <div class="about-content">
                 <h2>{{ post.subtitle }}</h2>
                 <p>
-                    {{ post.body }}
+                    {{ post.body | safe }}
                 </p>
             </div>
         </section>
