--- a/templates/header.html
+++ b/templates/header.html
@@ -20,6 +20,7 @@
                     <a href = "{{ url_for('signup') }}">sign up</a>
                     <a href = "{{ url_for('about') }}">about</a>
                     <a href = "{{ url_for('contact') }}">contact</a>
+                    <a href = "{{ url_for('view_dashboard') }}">dashboard</a>
                     <a href = "">log out</a>
                 </div>
             </div>
