--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,71 +1,43 @@
-{% include "header.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+     <!-- Font Awesome icons (free version)-->
+     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/contact.css') }}">
+</head>
+<body>
 
-<section class="contact">
+    {% include 'header.html' %}
 
-    <div class="contact-content">
-        {% if request.method == 'POST' %}
-            <h1>Successfully sent message!</h1>
-        {% else %}
-            <h2>Contact Me</h2>
-        {% endif %}
-        <p>
-            Want to get in touch? Fill out the form below to send me a message and
-            I will get back to you as soon as possible!
-        </p>
-    </div>
     <div class="contact-container">
-        <div class="contact-info">
-            <div class="contact-box">
-                <div class="icon">
-                    <i class = "fa fa-map-marker"></i>
+        <div class="contact-box">
+            <h2>Contact Me</h2>
+            <p>If you have any questions or inquiries, feel free to send a message!</p>
+            <form action="{{ url_for('contact') }}" method="POST">
+                <div class="input-group">
+                    <label for="name">Your Name:</label>
+                    <input type="text" id="name" name="name" required>
                 </div>
-                <div class="text">
-                    <h3>Address</h3>
-                    <p>129 Kiongoo Street <br>Nairobi, Kenya</p>
-                </div>
-            </div>
-            <div class="contact-box">
-                <div class="icon">
-                    <i class = "fa fa-envelope"></i>
-                </div>
-                <div class="text">
-                    <h3>Email</h3>
-                    <p>mgm.engineeringtie847@gmail.com</p>
-                </div>
-            </div>
-            <div class="contact-box">
-                <div class="icon">
-                    <i class = "fa fa-phone"></i>
-                </div>
-                <div class="text">
-                    <h3>Phone</h3>
-                    <p>+123-456-7890</p>
-                </div>
-            </div>
-        </div>
 
-        <div class="contact-form">
-            <form action="{{ url_for('contact') }}" method="post">
-                <h2>Send Message</h2>
-                <div class="input-box">
-                    <label for="username">Full Name</label>
-                    <input type="text" name="username" required="required">
+                <div class="input-group">
+                    <label for="email">Your Email:</label>
+                    <input type="email" id="email" name="email" required>
                 </div>
-                <div class="input-box">
-                    <label for="Email">Email</label>
-                    <input type="email" name="email" required="required">
+
+                <div class="input-group">
+                    <label for="message">Your Message:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
-                <div class="input-box">
-                    <label for="message">Type your message</label>
-                    <textarea name="message" required="required"></textarea>
-                </div>
-                <div class="input-box">
-                   <input type="submit" value="Send">
-                </div>
+
+                <button type="submit">Send Message</button>
             </form>
         </div>
-
     </div>
-</section>
 
-{% include "footer.html" %}
+    {% include 'footer.html' %}
+
+</body>
+</html>
