--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,18 @@
-{% include "header.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='/css/styles.css') }}">
+    
+</head>
+<body>
+
+  {% include "header.html" %}
+  
      <header>
         <div class = "banner">
           <div class = "container">
@@ -39,4 +53,7 @@
 
     </section>
 
-{% include "footer.html" %}
+    {% include "footer.html" %}
+
+</body>
+</html>
