--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,4 +1,3 @@
-/* Reset some default styling */
 * {
     margin: 0;
     padding: 0;
@@ -57,24 +56,23 @@ a {
     opacity: 0.7;
 }
 
-
 /* Style for the main container */
-.login-container {
+.contact-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
-    background-color: #f0f0f0;
+    height: 90vh;
+    background-color: #f9f9f9;
 }
 
-/* Style for the login box */
-.login-box {
+/* Style for the contact box */
+.contact-box {
     background-color: white;
-    padding: 30px;
+    padding: 40px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     width: 100%;
-    max-width: 400px;
+    max-width: 600px;
     text-align: center;
 }
 
@@ -83,9 +81,15 @@ h2 {
     color: #333;
 }
 
+p {
+    font-size: 16px;
+    color: #666;
+    margin-bottom: 20px;
+}
+
 /* Input group styling */
 .input-group {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     text-align: left;
 }
 
@@ -96,7 +100,8 @@ h2 {
     color: #666;
 }
 
-.input-group input {
+.input-group input,
+.input-group textarea {
     width: 100%;
     padding: 10px;
     font-size: 16px;
@@ -104,7 +109,8 @@ h2 {
     border-radius: 4px;
 }
 
-.input-group input:focus {
+.input-group input:focus,
+.input-group textarea:focus {
     outline: none;
     border-color: #5c9ded;
 }
@@ -125,28 +131,9 @@ button:hover {
     background-color: #4a8bde;
 }
 
-/* Styling for the sign-up/login toggle link */
-.toggle-link {
-    margin-top: 15px;
-}
-
-.toggle-link p {
-    font-size: 14px;
-    color: #666;
-}
-
-.toggle-link a {
-    color: #5c9ded;
-    text-decoration: none;
-}
-
-.toggle-link a:hover {
-    text-decoration: underline;
-}
-
 /* Media query for smaller screens */
 @media (max-width: 768px) {
-    .login-box {
+    .contact-box {
         padding: 20px;
     }
 
@@ -155,7 +142,8 @@ button:hover {
         font-size: 14px;
     }
 
-    .input-group input {
+    .input-group input,
+    .input-group textarea {
         padding: 8px;
         font-size: 14px;
     }
