implements the logout user functionality

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
                     <a href = "{{ url_for('about') }}">about</a>
                     <a href = "{{ url_for('contact') }}">contact</a>
                     <a href = "{{ url_for('view_dashboard') }}">dashboard</a>
-                    <a href = "">log out</a>
+                    <a href = "{{ url_for('logout') }}">log out</a>
                 </div>
             </div>
         </nav>
