--- a/templates/header.html
+++ b/templates/header.html
@@ -5,12 +5,16 @@
                 <a href = "{{ url_for('retrieve_all_posts') }}" class = "navbar-brand">Blog</a>
                 <div class = "navbar-nav">
                     <a href = "{{ url_for('retrieve_all_posts') }}">home</a>
-                    <a href = "{{ url_for('login') }}">login</a>
-                    <a href = "{{ url_for('signup') }}">sign up</a>
+                    {% if not current_user.is_authenticated %}
+                        <a href = "{{ url_for('login') }}">login</a>
+                        <a href = "{{ url_for('signup') }}">sign up</a>
+                    {% endif %}
                     <a href = "{{ url_for('about') }}">about</a>
                     <a href = "{{ url_for('contact') }}">contact</a>
                     <a href = "{{ url_for('view_dashboard') }}">dashboard</a>
-                    <a href = "{{ url_for('logout') }}">log out</a>
+                    {% if current_user.is_authenticated %}
+                        <a href = "{{ url_for('logout') }}">log out</a>
+                    {% endif %}
                 </div>
             </div>
         </nav>
