--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,13 @@
     <div class="login-container">
         <div class="login-box">
             <h2>{{ page_title }}</h2>
+            {% with errors = get_flashed_messages(category_filter=['error']) %}
+                {% if errors %}
+                    {% for error in errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
             <form action="{{ form_action }}" method="POST">
                 {% if page_title == 'Sign Up' %}
                     <div class="input-group">
