--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
     box-sizing: border-box;
 }
 
@@ -70,105 +70,49 @@ header {
     opacity: 0.7;
 }
 
-/* Blog Section */
-.blog {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 40px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-}
-
-.blog-heading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.blog-heading span {
-    font-size: 2.4rem;
-    color: #333;
-}
-
+/* blog section */
 .blog-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0px;
-    flex-wrap: wrap;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
-.blog-box {
-    width: 350px;
-    background-color: #ffffff;
-    border: 1px solid;
-    margin: 20px;
-    background-color: #f2f2f2;
+.blog-posts .post {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 20px;
 }
 
-.blog-img {
-    width: 100%;
-    height: auto;
-}
-
-.blog-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.blog-text {
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-}
-
-.blog-text span {
+.blog-posts .post h2 {
+    font-size: 24px;
     color: #333;
-    font-size: 0.9rem;
-    padding-bottom: 8px;
 }
 
-.blog-text .blog-title {
-    font-size: 1.3rem;
-    font-weight: 500; 
-    color: #272727;
-}
-
-.blog-text .blog-title:hover {
+.blog-posts .post p {
+    font-size: 16px;
     color: #666;
-    transition: all ease 0.3s;
 }
 
-.blog-text p {
-    color: #9b9b9b;
-    font-size: 0.9rem;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin: 20px 0px;
+.pagination {
+    margin-top: 20px;
 }
 
-.blog-text .read-more {
+.pagination .btn {
     display: inline-block;
-    padding: 5px 20px;
-    background-color: #4caf50;
-    color: #fff;
-    font-size: 20px;
+    padding: 10px 15px;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
     text-decoration: none;
-    text-align: center;
-    border-radius: 25px;
-    margin-top: 5px;
-    transition: 0.3s ease;
+    margin-right: 10px;
 }
 
-.blog-text .read-more:hover {
-    background-color: #3e8e41;
-    transition: all ease 0.3s;
+.pagination .btn:hover {
+    background-color: #0056b3;
+}
+
+.pagination p {
+    font-size: 14px;
+    color: #666;
 }
 
 /* Banner */
