changed the name of the function retrieve_all_posts to blogs

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <h2>Dashboard</h2>
-        <a href="{{ url_for('retrieve_all_posts') }}" class="btn-back-post">Back</a>
+        <a href="{{ url_for('blogs') }}" class="btn-back-post">Back</a>
         <a href="{{ url_for('create_new_post') }}" class="btn-new-post">Create New Post</a>
         <table>
             <thead>
