added the link to the css bootstrap styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <title>Home</title>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Add Bootstrap CSS for styling and carousel -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='/css/styles.css') }}">
     
 </head>
