modified the footer file

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,23 @@
 <!-- footer -->
-<footer>
+<!-- <footer>
     <div class = "socials">
-      <a href = "https://x.com/GeorgeMatiko?t=yqHFp_7iuUJHw0aMs3nD-Q&s=09"><i class = "fab fa-twitter"></i></a>
+      <a href = ""><i class = "fab fa-twitter"></i></a>
       <a href = "#"><i class = "fab fa-linkedin"></i></a>
-      <a href = "https://github.com/Maroa2002"><i class = "fab fa-github"></i></a>
+      <a href = ""><i class = "fab fa-github"></i></a>
     </div>
     <span>Copyright George Maroa</span>
+</footer> -->
+
+
+<footer>
+  <div class="footer-content">
+      <div class="social-media">
+          <a href="#">Linkedin</a>
+          <a href="https://x.com/GeorgeMatiko?t=yqHFp_7iuUJHw0aMs3nD-Q&s=09">Twitter</a>
+          <a href="https://github.com/Maroa2002">Github</a>
+      </div>
+      <div class="footer-info">
+          <p>&copy; 2024 George Maroa. All rights reserved.</p>
+      </div>
+  </div>
 </footer>
