--- a/templates/post.html
+++ b/templates/post.html
@@ -26,7 +26,7 @@
 
             <!-- Blog Post Meta Info -->
             <div class="post-meta">
-                <p>By <strong>{{ post.author }}</strong> | {{ post.date }}</p>
+                <p>By <strong>{{ post.author.name }}</strong> | {{ post.date }}</p>
             </div>
 
             <!-- Blog Post Body -->
